<resources>
    <plurals name="transfer_label_plural">
        <item quantity="one">1 imported address</item>
        <item quantity="other">%d imported addresses</item>
    </plurals>
    <string name="upgrade_wallet">Upgrade</string>
    <string name="backup_wallet">Backup funds</string>
    <string name="current_price_btc">1 BTC = %1$s</string>
    <string name="action_settings">Settings</string>
    <string name="all_accounts">All Wallets</string>
    <string name="please_wait">Please wait</string>
    <string name="item_buy_sell">Buy &amp; Sell</string>
    <string name="item_buy">Buy Crypto</string>
    <string name="item_backup">Backup funds</string>
    <string name="item_lockbox">Lockbox</string>
    <string name="item_the_exchange">Exchange</string>
    <string name="item_simple_buy">Simple buy</string>
    <string name="item_airdrops">Airdrops</string>
    <string name="item_debug_homebrew" translatable="false">Debug Homebrew</string>
    <string name="toolbar_cmd_home">Home</string>
    <string name="toolbar_cmd_send">Send</string>
    <string name="toolbar_cmd_receive_crypto">Receive</string>
    <string name="toolbar_cmd_activity">Activity</string>
    <string name="toolbar_cmd_view_activity">View Activity</string>
    <string name="toolbar_cmd_swap">Swap</string>
    <string name="cancel">Cancel</string>
    <string name="btn_ok">OK</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="polite_no">No thanks</string>
    <string name="done">Done</string>
    <string name="btn_close">Close</string>
    <string name="pax_fee_1">USD-D FEE</string>
    <string name="sending">Sending</string>
    <string name="receiving">Receiving</string>
    <string name="tx_sent">Sent</string>
    <string name="tx_received">Received</string>
    <string name="tx_moved">Transferred</string>
    <string name="tx_swapped">Swapped</string>
    <string name="tx_bought">Bought</string>
    <string name="tx_sold">Sold</string>
    <string name="edit_transaction_hint">Edit transaction description</string>
    <string name="pie_chart_content">pie chart</string>
    <string name="paid">Paid</string>
    <string name="copied_to_clipboard">Copied to clipboard</string>
    <string name="options_id">Wallet ID</string>
    <string name="preferences_about_title">About Us</string>
    <string name="logout_wallet">Log Out</string>
    <string name="ask_you_sure_logout">Are you sure you want to log out from this wallet?</string>
    <string name="btn_logout">Logout</string>
    <string name="select_currency">Select Currency</string>
    <string name="options_currency">Local Currency</string>
    <string name="options_units">Bitcoin Unit</string>
    <string name="options_tos">Terms of Service</string>
    <string name="options_privacy">Privacy Policy</string>
    <string name="invalid_email">Invalid email address</string>
    <string name="invalid_mobile">Invalid mobile phone number</string>
    <string name="invalid_password">Invalid password</string>
    <string name="invalid_password_too_short">Please enter more than 3 characters</string>
    <string name="invalid_guid">Invalid Wallet ID</string>
    <string name="password_mismatch_error">Passwords do not match</string>
    <string name="change_password_new_matches_current">You can\'t use your current password as your
        new password
    </string>
    <string name="no_private_key">Cannot produce private key.</string>
    <string name="pin_4_strikes">4 failed PIN attempts. Please provide password.</string>
    <string name="pin_4_strikes_password_accepted">Password accepted. Please define new PIN.
    </string>
    <string name="bip38_password_entry">Please enter private key password</string>
    <string name="pin_entry">Enter PIN</string>
    <string name="password_entry">Please enter password</string>
    <string name="zero_pin">0000 is an invalid PIN. Please try again.</string>
    <string name="invalid_pin">Invalid PIN. Please try again.</string>
    <string name="pin_mismatch_error">PINs do not match</string>
    <string name="create_pin">Create PIN</string>
    <string name="confirm_pin">Confirm PIN</string>
    <string name="create_pin_failed">PIN creation failed. Please pair device again.</string>
    <string name="change_pin_new_matches_current">You can\'t use your current PIN as your new PIN
    </string>
    <string name="pairing_failed">Pairing failed. Please try again.</string>
    <string name="account_locked_title">Account locked</string>
    <string name="account_locked_message">Your account has been locked temporarily as a precaution.
        Please check your email for more information and try again later.
    </string>
    <string name="pin_box_0">Pin Box 0</string>
    <string name="pin_box_1">Pin Box 1</string>
    <string name="pin_box_2">Pin Box 2</string>
    <string name="pin_box_3">Pin Box 3</string>
    <string name="fingerprint_logo">Fingerprint Logo</string>
    <string name="keyboard_input_1">Keyboard Input 1</string>
    <string name="keyboard_input_2">Keyboard Input 2</string>
    <string name="keyboard_input_3">Keyboard Input 3</string>
    <string name="keyboard_input_4">Keyboard Input 4</string>
    <string name="keyboard_input_5">Keyboard Input 5</string>
    <string name="keyboard_input_6">Keyboard Input 6</string>
    <string name="keyboard_input_7">Keyboard Input 7</string>
    <string name="keyboard_input_8">Keyboard Input 8</string>
    <string name="keyboard_input_9">Keyboard Input 9</string>
    <string name="keyboard_input_0">Keyboard Input 0</string>
    <string name="keyboard_input_delete">Keyboard Input Delete</string>
    <string name="check_connectivity_exit">Blockchain Wallet cannot obtain an Internet connection.
        Please check the connectivity on your device and try again.
    </string>
    <string name="double_encryption_password_error">Double encrypt password error. Please try again.</string>
    <string name="btn_scan_pairing_code">Scan pairing code</string>
    <string name="btn_manual_pairing">Manual Pairing</string>
    <string name="create_a_wallet">Create an Account</string>
    <string name="log_in">Log in</string>
    <string name="login_auto_pair_title">Automatic Pairing</string>
    <string name="manual_pairing">Manual Pairing</string>
    <string name="pair_wallet_step_1">Log in to your Blockchain Wallet via your PC or Mac at %1$s.</string>
    <string name="pair_wallet_step_2">Go to Settings / General.</string>
    <string name="landing_title">Welcome to Blockchain</string>
    <string name="landing_body">The easy way to <b>send</b>, <b>receive</b>, <b>store</b> and <b>trade</b> digital currencies.</string>
    <string name="pair_wallet_step_3">Click Show Pairing Code to reveal a QR Code, a square black
        &amp; white barcode. Scan the code with your camera.
    </string>
    <string name="wallet_id">Wallet ID</string>
    <string name="recover_funds">Recover Funds</string>
    <string name="recover_funds_warning_message">You should always pair or login if you have access
        to your Wallet ID and password. Recovering your funds will create a new Wallet ID. Would you
        like to continue?
    </string>
    <string name="recover_funds_instructions">Enter your 12 backup words with spaces to recover your
        funds &amp; transactions
    </string>
    <string name="recovery_passphrase">Backup phrase</string>
    <string name="invalid_recovery_phrase">Invalid backup phrase. Please try again</string>
    <string name="creating_wallet">Creating wallet</string>
    <string name="password">Password</string>
    <string name="email">Your Email</string>
    <string name="btn_continue">Continue</string>
    <string name="btn_forgot_password">Forgot Password?"</string>
    <string name="support">Support</string>
    <string name="wipe_wallet">Forget wallet</string>
    <string name="change_pin_code">Change PIN</string>
    <string name="drawer_addresses">Addresses</string>
    <string name="disable_root_warning">Disable rooted device warning</string>
    <string name="logout">Logout</string>
    <string name="mobile">Mobile</string>
    <string name="profile">Profile</string>
    <string name="app">App</string>
    <string name="security">Security</string>
    <string name="enable_fingerprint">Fingerprint Unlock</string>
    <string name="two_fa">2-step Verification</string>
    <string name="tor_requests">Block Tor Requests</string>
    <string name="tor_summary">Block IP addresses that are known to be part of the Tor anonymizing
        network. The Tor network is frequently used by hackers attempting to access Blockchain
        user\'s wallets.
    </string>
    <string name="enable_screenshots">Enable Screenshots</string>
    <string name="enable_screenshots_summary">Some screens within the application can display
        sensitive data. Other applications will be able to access these screenshots.
    </string>
    <string name="change_password">Change Password</string>
    <string name="email_notifications">Email Notifications</string>
    <string name="preferences">Preferences</string>
    <string name="two_fa_summary">Protect your wallet from unauthorized access by enabling 2-Step
        Verification.
    </string>
    <string name="pairing_code_log_in">Log in to Web Wallet</string>
    <string name="logged_out_enter_password">You have logged out or there was an error decrypting
        your wallet. Enter your password below to login.
    </string>
    <string name="logged_out_forget_wallet">If you would like to forget this wallet and start over,
        press \'Forget Wallet\'.
    </string>
    <string name="push_notifications">Push Notifications</string>
    <string name="backup_header">Backup Phrase</string>
    <string name="backup_explanation">For your security, Blockchain does not keep any passwords on
        file. The following 12 word Backup Phrase will give you access to your funds in case you
        lose your password. Be sure to write it on a piece of paper and to keep it somewhere safe
        and secure.
    </string>
    <string name="backup_button_start">Start backup</string>
    <string name="backup_header_complete">Backup Complete</string>
    <string name="backup_complete_message">You can use your Backup Phrase to restore your funds if
        you lose your password. Anyone with access to your Backup Phrase can access your funds so
        remember to keep it offline somewhere safe and secure.
    </string>
    <string name="backup_again">Backup again</string>
    <string name="backup_confirmed">Backup confirmed</string>
    <string name="backup_lost_mnemonic">Lost your 12 word backup phrase?</string>
    <string name="shortcut_settings_summary">Reveal a receive address when you long-press on the app
        icon in the launcher, making receiving bitcoin even faster.
    </string>
    <string name="shortcut_settings_enable">Launcher Shortcuts</string>
    <string name="swipe_receive_hint">Swipe to receive</string>
    <string name="swipe_receive_preference_summary">Reveal a receive address when you swipe left on
        the PIN screen, making receiving funds even faster.
    </string>
    <string name="buy_sell">Buy &amp; Sell</string>
    <string name="swap_info_contact_support">Contact Support</string>
    <string name="swap_info_swap_limits">Swap Limits</string>
    <string name="swap_info_order_history">Order History</string>
    <string name="kyc_profile_next">Next</string>
    <string name="kyc_email_message">We need to verify your email address as an added layer of security.</string>
    <string name="kyc_email_validation_header">Check your inbox.</string>
    <string name="kyc_email_validation_message">We just sent you an email with further instructions.</string>
    <string name="kyc_email_did_not_see_email">Didn\'t see email? <annotation link="send_again">Send again</annotation></string>
    <string name="kyc_settings_swap_limit">Swap Limit</string>
</resources>