<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        app:contentDescription="@string/buy_sell"
        android:id="@+id/nav_buy"
        android:icon="@drawable/vector_buy"
        android:title="@string/buy_sell"
        android:visible="false" />

    <item
        android:id="@+id/nav_exchange_homebrew_debug"
        android:icon="@drawable/vector_exchange"
        android:title="@string/debug_morph_exchange_homebrew"
        android:visible="false" />

    <item
        app:contentDescription="@string/backup_wallet"
        android:id="@+id/nav_backup"
        android:icon="@drawable/vector_backup"
        android:title="@string/backup_wallet" />

    <item
        app:contentDescription="@string/action_settings"
        android:id="@+id/nav_settings"
        android:icon="@drawable/vector_settings"
        android:title="@string/action_settings" />

    <item
        app:contentDescription="@string/drawer_addresses"
        android:id="@+id/nav_addresses"
        android:icon="@drawable/vector_wallet"
        android:title="@string/drawer_addresses" />

    <item
        app:contentDescription="@string/lockbox_title"
        android:id="@+id/nav_lockbox"
        android:icon="@drawable/vector_lockbox"
        android:title="@string/lockbox_title"
        android:visible="false" />

    <item
        app:contentDescription="@string/pairing_code_log_in"
        android:id="@+id/login_web_wallet"
        android:icon="@drawable/vector_web"
        android:title="@string/pairing_code_log_in" />

    <item
        app:contentDescription="@string/support"
        android:id="@+id/nav_support"
        android:icon="@drawable/vector_help"
        android:title="@string/support" />

    <item
        app:contentDescription="@string/logout"
        android:id="@+id/nav_logout"
        android:icon="@drawable/vector_logout"
        android:title="@string/logout" />

</menu>