<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:id="@+id/action_menu_actions">
        <item
            android:id="@+id/action_send"
            android:icon="@drawable/ic_vector_toolbar_send"
            android:title="@string/toolbar_cmd_send"
            app:contentDescription="@string/toolbar_cmd_send"
            android:visible="false"/>

        <item
            android:id="@+id/action_receive"
            android:icon="@drawable/ic_vector_toolbar_receive"
            app:contentDescription="@string/toolbar_cmd_receive_crypto"
            android:title="@string/toolbar_cmd_receive_crypto"
            android:visible="false"/>

        <item
            android:id="@+id/action_swap"
            android:icon="@drawable/ic_vector_toolbar_swap"
            app:contentDescription="@string/toolbar_cmd_swap"
            android:title="@string/toolbar_cmd_swap"
            android:visible="false"/>
    </group>

    <group android:id="@+id/action_menu_view">
        <item
            android:id="@+id/action_activity"
            android:icon="@drawable/ic_vector_toolbar_activity"
            app:contentDescription="@string/toolbar_cmd_view_activity"
            android:title="@string/toolbar_cmd_view_activity"
            android:visible="false"/>
    </group>
</menu>
