<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="32dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/backup_header_complete"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/subheading_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/primary_grey_dark"
                android:textSize="12sp"
                tools:text="Last backup: Sept 08, 2016" />

        </LinearLayout>

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="8dp"
            android:contentDescription="@string/backup_confirmed"
            android:padding="8dp"
            app:srcCompat="@drawable/vector_success" />

    </RelativeLayout>

    <TextView
        style="@style/Text.Standard.Centered.14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/huge_margin"
        android:text="@string/backup_complete_message" />

    <TextView
        style="@style/Text.Standard.Centered.12"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/huge_margin"
        android:text="@string/backup_lost_mnemonic"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_backup_done"
        style="@style/CtaButton.Blue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/huge_margin"
        android:text="@string/done" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_backup_again"
        style="@style/CtaButton.White"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_margin"
        android:text="@string/backup_again" />
</LinearLayout>