<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <include layout="@layout/toolbar_general" />

    <TextView
        android:id="@+id/text_logged_out"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/standard_margin"
        style="@style/Text.Standard.14"
        android:text="@string/logged_out_enter_password"
        android:contentDescription="@string/logged_out_enter_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_general"/>

    <piuk.blockchain.android.ui.customviews.AnimatedPasswordInputLayout
        android:id="@+id/input_layout_password"
        android:hint="@string/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:layout_marginStart="@dimen/standard_margin"
        android:layout_marginEnd="@dimen/standard_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_logged_out">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/field_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:maxLines="1" />

    </piuk.blockchain.android.ui.customviews.AnimatedPasswordInputLayout>

    <Button
        android:id="@+id/button_continue"
        style="@style/CtaButton.Blue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:text="@string/btn_continue"
        android:contentDescription="@string/btn_continue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_layout_password"/>

    <Button
        android:id="@+id/button_recover"
        style="@style/CtaButton.White"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_forgot_password"
        android:contentDescription="@string/btn_forgot_password"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_continue"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="@dimen/standard_margin"
        android:layout_marginEnd="@dimen/standard_margin"
        android:text="@string/logged_out_forget_wallet"
        android:contentDescription="@string/logged_out_forget_wallet"
        style="@style/Text.Standard.14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/button_forget"/>

    <Button
        android:id="@+id/button_forget"
        style="@style/CtaButton.Red"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/wipe_wallet"
        android:contentDescription="@string/wipe_wallet"
        android:layout_marginBottom="21dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</android.support.constraint.ConstraintLayout>