<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:background="@color/bottom_dialog_background">

    <Button
        android:id="@+id/btn_history"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:padding="16dp"
        android:theme="@style/LightBlueButtonTheme"
        android:textAllCaps="false"
        android:contentDescription="@string/swap_info_order_history"
        android:text="@string/swap_info_order_history" />

    <Button
        android:id="@+id/btn_limits"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:padding="16dp"
        android:theme="@style/LightBlueButtonTheme"
        android:textAllCaps="false"
        android:contentDescription="@string/swap_info_swap_limits"
        android:text="@string/swap_info_swap_limits" />

    <Button
        android:id="@+id/btn_support"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:padding="16dp"
        android:theme="@style/LightBlueButtonTheme"
        android:textAllCaps="false"
        android:contentDescription="@string/swap_info_contact_support"
        android:text="@string/swap_info_contact_support" />

</LinearLayout>